@@ -18,6 +18,7 @@ This file lists the incompatible changes between Version 2.x and older versions
     commands, not for library use) are now obsolete. The new equivalent
     commands (still not meant for library use) are precision00 and
     bitprecision00.
+  - gen_factorback: change argument order to match other functions.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - the bid struct from idealstar has changed, the new format is not
